avcodec/mpegvideo_enc: override bitrate tolerance when its value is too small

Fixes Ticket3257

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>